--- a/content.html
+++ b/content.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>css自适应正方形</title>
+    <title>css自适应正方形几种方式</title>
 </head>
 <style>
   .square {   /*自适应正方形1*/
