--- a/content.html
+++ b/content.html
@@ -6,34 +6,41 @@
 </head>
 <style>
   .square {   /*自适应正方形1*/
-    width: 50%;
+    width: 20%;
     border: 1px solid;
-    padding-bottom: 50%;   /*padding-top会是内容在框外*/
-    height: 0;
+    padding-bottom: 20%;   /*padding-top会是内容在框外*/
+    height: 0;   /*防止盒子里面有内容的时候，盒子会被内容撑大*/
+    background-color: red;
+  }
+  .square span {
+    background-color: #ccc;
   }
 
 
   .square1 {
-    width: 50%;
+    width: 20%;
     border: 1px solid;
     position: relative;
+    background-color: red;
   }
   .square1:after {
     content: "";
     display: block;
-    padding-bottom: 100%;
+    padding-bottom: 100%; /*百分比相对父元素宽度计算 */
   }
   .square1 > .content {
     position: absolute;
     width: 100%;
     height: 100%;
+    background-color: #ccc;
   }
 </style>
 <body>
   <div class="square">  <!--自适应正方形1-->
-    <spna>dfs</spna>
+    <span>dfs</span>
   </div>
   <p></p>
+  <br>
   <div class="square1">  <!--自适应正方形2-->
     <div class="content">
       <span>dfgds</span>
