--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0, user-scaleable=yes">
     <title>vue_demo</title>
   </head>
-  <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=53oVIOgmSIejwV7EfphPgTynOZbIiVYu"></script>
+  <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=53oVIOgmSIejwV7EfphPgTynOZbIiVYu" ignore></script>
   <body>
-    <div id="app"></div>
+    <div id="micro_app"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
