--- a/test.html
+++ b/test.html
@@ -100,7 +100,7 @@
 
   }
   var input = [ 1, 2, 3, 4, 5 ];
-  foldArray(input, 1);
+  console.log('foldArray: ',foldArray(input, 1));
   foldArray(input, 2);
 
   function isMerge(s, part1, part2) {
@@ -208,15 +208,112 @@
         return -1;
     }
 
+    // 数字转换为千位符
     function parseToMoney(num) {
       num = parseFloat(num.toFixed(3));
       let [integer, decimal] = String.prototype.split.call(num, '.');
-      integer = integer.replace(/\d(?=(\d{3})+$)/g, '$&,');
+      integer = integer.replace(/\d(?=(\d{3})+$)/g, '$&,'); // (\d{3})+表示3的倍数的个数，?=表示后面一定是3的倍数个数字。 exp1(?=exp2)：查找 exp2 前面的 exp1
       return integer + '.' + (decimal ? decimal : '');
     }
     console.log(parseToMoney(1234.56)); // return '1,234.56'
     console.log(parseToMoney(123456789)); // return '123,456,789'
     console.log(parseToMoney(1087654.321)); // return '1,087,654.321'
+
+
+    // 实现数组展开flat
+    //array数组， d是要展开的层级
+    function flat1(array, d = 1) {
+      if(d<1) {
+        return array;
+      }
+      for(let i in array) {
+        let item = array[i];
+        if(Array.isArray(item)) {
+            array.splice(i,1, ...item);
+        }
+      }
+      if(d-1 > 0) {
+        array = flat1(array, d-1);
+      }
+      return array;
+    }
+
+    function flat2(array, d = 1) {
+      if(d<1) {
+        return array;
+      }
+      for(let i in array) {
+        let item = array[i];
+        if(Array.isArray(item)) {
+            // if(d-1>0) {
+            //     array.splice(i,1, ...flat2(item, d-1));
+            // } else {
+            //     array.splice(i,1, ...item);
+            // }
+            array.splice(i,1, ...flat2(item, d-1));
+
+        }
+      }
+      return array;
+    }
+
+    function flat3(array, d = 1) {
+        if(d<1) {
+            return array;
+        }
+        let arr = array.reduce((result,item) => {
+            return Array.isArray(item) ? result.concat(flat3(item, d-1)) : result.concat(item);
+        },[])
+        return arr;
+    }
+
+    let flatArr1 = flat1([1,3,[4,3,[5]],6], 2);
+    let flatArr2 = flat2([1,3,[4,3,[5]],6], 1);
+    let flatArr3 = flat3([1,3,[4,3,[5]],6], 1);
+    console.log('展开数组1：',flatArr1)
+    console.log('展开数组2：',flatArr2)
+    console.log('展开数组3：',flatArr3)
+
+
+    // 实现promise.all
+    Promise.prototype.all = function(promises) {
+    let results = [];
+    let promiseCount = 0;
+    let promisesLength = promises.length;
+    return new Promise(function(resolve, reject) {
+      for (let val of promises) {
+        Promise.resolve(val).then(function(res) {
+          promiseCount++;
+          // results.push(res);
+          results[i] = res;
+          // 当所有函数都正确执行了，resolve输出所有返回结果。
+          if (promiseCount === promisesLength) {
+            return resolve(results);
+          }
+        }, function(err) {
+          return reject(err);
+        });
+      }
+    });
+  };
+
+  //获取字符串中最长的连续数字
+  function getLongIn(str) {
+    // str = str.replace(/[^\d]/g,',');
+    // let strArr = str.split(',');
+    let strArr = str.match(/\d+/g); //取出数字
+    console.log(strArr)
+    let result = strArr.length ? strArr[1] : '';
+    for(let item of strArr) {
+      if(item.length > result.length) {
+        result = item;
+      }
+    }
+    return result;
+  }
+  var strLong = '3fsffs343434ldl44453';
+  console.log(getLongIn(strLong))
+
 </script>
 </body>
 </html>
